// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`About component matches snapshot 1`] = `
<div
  className="App"
>
  <p>
    This is the about page
  </p>
</div>
`;

exports[`Home component matches snapshot 1`] = `
<div
  className="App"
>
  <p>
    This is a single page app test to learn testing, and accessibility.
  </p>
</div>
`;

exports[`Show list component matches snapshot 1`] = `
<div
  className="ui card"
>
  <div
    className="content"
  >
    <p>
      The show list is empty right now
    </p>
  </div>
</div>
`;
